# agentic-jso

./: .gitignore  README.md  inputs.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: main.py
backend/nodes/: parser.py  query_expansion.py  query_generator.py  search.py  xray_adapters.py
backend/utils/: config.py  prompts.py
frontend/: .env.example  INTEGRATION.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/api/search/: route.ts
frontend/components/: ResultCard.tsx  ResultsList.tsx  SearchForm.tsx
frontend/lib/: backend.ts
frontend/store/: searchStore.ts
frontend/types/: index.ts
nodes/: parser.py  query_expansion.py  query_generator.py  search.py  xray_adapters.py
utils/: config.py  prompts.py  schema.py
